@@ -1,3 +1,7 @@
+2023-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Harden table title view helper against missing table title, resolves #299
+
 2023-09-17 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Fix compatibility with PHP 7.4, resolves #296
